tests/paczka1/fuzzy1/13837675.err
Error in line 10: jeKIJQJ A55 17,0
Error in line 6: 6Zf5UG S99 10,5
Error in line 9: Nk1qKno S962 4,3
Error in line 16: Nk1qKno A55 36,9
Error in line 21: jeKIJQJ S962 10,9
Error in line 31: S99 A`` `7,4
Error in line 33: VR24 A55 27,7
Error in line 36: Nk1qKno A649 77,59
Error in line 35: VR24 A649 40,9
Error in line 29: enGjOQGO2p S99 87,7
